--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "simplebar-vue": "^2.3.3",
     "vue": "^3.4.21"
   },
   "devDependencies": {
