--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "markdown-it": "^14.1.0",
     "simplebar-vue": "^2.3.3",
     "vue": "^3.4.21",
+    "vue-markdown-render": "^2.1.1",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
