--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.10",
     "gsap": "^3.12.5",
     "markdown-it": "^14.1.0",
     "simplebar-vue": "^2.3.3",
