--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@vercel/speed-insights": "^1.0.10",
     "gsap": "^3.12.5",
     "markdown-it": "^14.1.0",
+    "marked": "^12.0.2",
     "simplebar-vue": "^2.3.3",
     "vue": "^3.4.21",
     "vue-markdown-render": "^2.1.1",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vuex": "^4.1.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
