--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.10",
+    "axios": "^1.6.8",
     "gsap": "^3.12.5",
     "markdown-it": "^14.1.0",
     "marked": "^12.0.2",
